kubernetes/preprod/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    env: preprod
    app: flight-service
    layer: frontend
  name: preprod-flight-service-service
  namespace: preprod
spec:
  type: NodePort
  selector:
    app: flight-service
  ports:
    - name: api
      port: 8080
      targetPort: 8080
